--- a/views/create.ejs
+++ b/views/create.ejs
@@ -19,6 +19,7 @@
                             <option value="Cheese">Cheese</option>
                             <option value="Veggies">Veggies</option>
                             <option value="Meat">Meat</option>
+                            <option value="Garnish">Garnish</option>
                         </select>
                     </div>
                     <div>
