create update pizza form layout

--- a/public/styles.css
+++ b/public/styles.css
@@ -269,14 +269,16 @@ div > input, select {
     min-height: 300px;
     padding: 5px;
     font-family: 'Exo 2', sans-serif;
-
+}
+#pizza-view-control {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
 }
 #pizza-list-wrapper {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    width: 95%;
     margin: auto;
     padding: 10px;
+    height: 700px;
+    overflow-y: scroll;
 }
 .pizza-list-item-wrapper {
     border: 1px solid #bc1a1f;
@@ -284,13 +286,13 @@ div > input, select {
     border-radius: 10px;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    width: 500px;
+    width: 95%;
     max-height: 160px;
     background-color: #9c9dbe;
     margin: 5px;
 }
 .pizza-list-item-image {
-    width: 250px;
+    width: 100%;
 }
 .pizza-list-item-image > img {
     max-height: 100%;
@@ -300,11 +302,41 @@ div > input, select {
 .pizza-list-item-data {
     display: grid;
     grid-template-rows: .4fr 1.6fr 1fr;
+    font-size: .8vw;
 }
-.pizza-list-topping {
+.pizza-list-item-topping {
     display: inline;
     background-color: #13ab08;
     margin: 3px;
+}
+#pizza-update-wrapper {
+    border: 3px solid #13ab08;
+    display: grid;
+    grid-template-rows: .7fr .8fr 1.5fr;
+}
+
+#pizza-update-metadata {
+    display: grid;
+    grid-template-columns: .8fr 1.2fr;
+    border: 2px solid blue;
+}
+#pizza-update-photo>img {
+    max-width: 100%;
+}
+#pizza-update-actions {
+    width: fit-content;
+    margin: auto;
+}
+.available-topping {
+    border: 1px dashed #bc1a1f;
+    background-color: #870d51;
+    width: fit-content;
+    display: inline;
+    margin: 3px;
+}
+.selected {
+    border: 1px dashed #13ab08;
+    background-color: #065400;
 }
 
 #primary{
