--- a/views/chefdashboard.ejs
+++ b/views/chefdashboard.ejs
@@ -4,30 +4,71 @@
     <body>
         <%- include('./partials/header-nav.ejs', {title: title, username: user.username}); %>
         <div style="text-align: center; width: 40%; margin: auto;">
-            <h2 style="color: #13ab08; margin: 20px 40px;" >Welcome, <%= user.fname %> <%= user.lname %></h2>
+            <h2 style="color: #13ab08; margin: 20px 40px;" >Welcome, Chef <%= user.fname %> <%= user.lname %></h2>
         </div>
-        <div class="button">New Pizza</div>
+        
         <div id="pizza-view-container">
-            <div id="pizza-list-wrapper">
-                <div class="pizza-list-item-wrapper"> 
-                    <div class="pizza-list-item-image">
-                        <img src="./images/pizza-pep-veg.webp" alt="">
-                    </div>
-                    <div class="pizza-list-item-data">
-                        <div>
-                            <h3 style="display: inline;">Pepperoni Pizzaaa</h3> ~ 10.99
+            <div class="button" style="margin-left: 50px;">Create a Pizza</div>
+            <div id="pizza-view-control">
+                <div id="pizza-list-wrapper">
+                    <div class="pizza-list-item-wrapper"> 
+                        <div class="pizza-list-item-image">
+                            <img src="./images/pizza-pep-veg.webp" alt="">
                         </div>
-                        <div>
-                            A description of a potential pizza but we're also gonna test how long we can make this go in 
-                        </div>
-                        <div>
-                            <div class="pizza-list-topping">Tomato Sauce</div>
-                            <div class="pizza-list-topping">Mozarella Cheese</div>
-                            <div class="pizza-list-topping">Pepperoni</div>
+                        <div class="pizza-list-item-data">
+                            <div>
+                                <h3 style="display: inline;">Pepperoni Pizzaaa</h3> ~ 10.99
+                            </div>
+                            <div>
+                                A description of a potential pizza but we're also gonna test how long we can make this go in 
+                            </div>
+                            <div>
+                                <div class="pizza-list-item-topping">Tomato Sauce</div>
+                                <div class="pizza-list-item-topping">Mozarella Cheese</div>
+                                <div class="pizza-list-item-topping">Pepperoni</div>
+                            </div>
                         </div>
                     </div>
                 </div>
-                
+                <form id="pizza-update-wrapper">
+                    <div id="pizza-update-metadata">
+                        <div id="pizza-update-photo">
+                            <img src="./images/pizza-pep-veg.webp" alt="">
+                        </div>
+                        <div id="pizza-update-forminputs">
+                            <div>
+                                <h3>Name</h3>
+                                <input type="text" name="name" placeholder="Name" maxlength="17">
+                            </div>
+                            <div>
+                                <h3>Description</h3>
+                                <textarea name="description" maxlength="90" style="width: 95%; height: 20%; border-radius: 8px; resize: none;" id="update-pizza-description"></textarea>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="pizza-update-toppings"> 
+                        <h3>Choose Toppings:</h3>
+                        <div class="available-topping">
+                            Mozzarella
+                        </div>
+                        <div class="available-topping">
+                            Tomato Sauce
+                        </div>
+                        <div class="available-topping selected">
+                            Chicken
+                        </div>
+                        <div class="available-topping">
+                            Pineapple
+                        </div>
+                        <div class="available-topping">
+                            Caviar
+                        </div>
+                    </div>
+                    <div id="pizza-update-actions">
+                        <button class="button">Delete Pizza</button>
+                        <button class="button" style="width:fit-content">Submit Changes</button>
+                    </div>
+                </form>
             </div>
         </div>
     </body>
