--- a/views/chefdashboard.ejs
+++ b/views/chefdashboard.ejs
@@ -20,7 +20,133 @@
                                 <h3 style="display: inline;">Pepperoni Pizzaaa</h3> ~ 10.99
                             </div>
                             <div>
-                                A description of a potential pizza but we're also gonna test how long we can make this go in 
+                                A description of a potential pizza but we're also gonna test how long we can make this go in.
+                            </div>
+                            <div>
+                                <div class="pizza-list-item-topping">Tomato Sauce</div>
+                                <div class="pizza-list-item-topping">Mozarella Cheese</div>
+                                <div class="pizza-list-item-topping">Pepperoni</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="pizza-list-item-wrapper"> 
+                        <div class="pizza-list-item-image">
+                            <img src="./images/pizza-pep-veg.webp" alt="">
+                        </div>
+                        <div class="pizza-list-item-data">
+                            <div>
+                                <h3 style="display: inline;">When one has too many</h3> ~ 10.99
+                            </div>
+                            <div>
+                                A description of a potential pizza but we're also gonna test how long we can make this go in.
+                            </div>
+                            <div>
+                                <div class="pizza-list-item-topping">Tomato Sauce</div>
+                                <div class="pizza-list-item-topping">Mozarella Cheese</div>
+                                <div class="pizza-list-item-topping">Pepperoni</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="pizza-list-item-wrapper"> 
+                        <div class="pizza-list-item-image">
+                            <img src="./images/pizza-pep-veg.webp" alt="">
+                        </div>
+                        <div class="pizza-list-item-data">
+                            <div>
+                                <h3 style="display: inline;">Pepperoni Pizzaaa</h3> ~ 10.99
+                            </div>
+                            <div>
+                                A description of a potential pizza but we're also gonna test how long we can make this go in.
+                            </div>
+                            <div>
+                                <div class="pizza-list-item-topping">Tomato Sauce</div>
+                                <div class="pizza-list-item-topping">Mozarella Cheese</div>
+                                <div class="pizza-list-item-topping">Pepperoni</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="pizza-list-item-wrapper"> 
+                        <div class="pizza-list-item-image">
+                            <img src="./images/pizza-pep-veg.webp" alt="">
+                        </div>
+                        <div class="pizza-list-item-data">
+                            <div>
+                                <h3 style="display: inline;">Pepperoni Pizzaaa</h3> ~ 10.99
+                            </div>
+                            <div>
+                                A description of a potential pizza but we're also gonna test how long we can make this go in.
+                            </div>
+                            <div>
+                                <div class="pizza-list-item-topping">Tomato Sauce</div>
+                                <div class="pizza-list-item-topping">Mozarella Cheese</div>
+                                <div class="pizza-list-item-topping">Pepperoni</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="pizza-list-item-wrapper"> 
+                        <div class="pizza-list-item-image">
+                            <img src="./images/pizza-pep-veg.webp" alt="">
+                        </div>
+                        <div class="pizza-list-item-data">
+                            <div>
+                                <h3 style="display: inline;">Pepperoni Pizzaaa</h3> ~ 10.99
+                            </div>
+                            <div>
+                                A description of a potential pizza but we're also gonna test how long we can make this go in.
+                            </div>
+                            <div>
+                                <div class="pizza-list-item-topping">Tomato Sauce</div>
+                                <div class="pizza-list-item-topping">Mozarella Cheese</div>
+                                <div class="pizza-list-item-topping">Pepperoni</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="pizza-list-item-wrapper"> 
+                        <div class="pizza-list-item-image">
+                            <img src="./images/pizza-pep-veg.webp" alt="">
+                        </div>
+                        <div class="pizza-list-item-data">
+                            <div>
+                                <h3 style="display: inline;">Pepperoni Pizzaaa</h3> ~ 10.99
+                            </div>
+                            <div>
+                                A description of a potential pizza but we're also gonna test how long we can make this go in.
+                            </div>
+                            <div>
+                                <div class="pizza-list-item-topping">Tomato Sauce</div>
+                                <div class="pizza-list-item-topping">Mozarella Cheese</div>
+                                <div class="pizza-list-item-topping">Pepperoni</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="pizza-list-item-wrapper"> 
+                        <div class="pizza-list-item-image">
+                            <img src="./images/pizza-pep-veg.webp" alt="">
+                        </div>
+                        <div class="pizza-list-item-data">
+                            <div>
+                                <h3 style="display: inline;">Pepperoni Pizzaaa</h3> ~ 10.99
+                            </div>
+                            <div>
+                                A description of a potential pizza but we're also gonna test how long we can make this go in.
+                            </div>
+                            <div>
+                                <div class="pizza-list-item-topping">Tomato Sauce</div>
+                                <div class="pizza-list-item-topping">Mozarella Cheese</div>
+                                <div class="pizza-list-item-topping">Pepperoni</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="pizza-list-item-wrapper"> 
+                        <div class="pizza-list-item-image">
+                            <img src="./images/pizza-pep-veg.webp" alt="">
+                        </div>
+                        <div class="pizza-list-item-data">
+                            <div>
+                                <h3 style="display: inline;">Pepperoni Pizzaaa</h3> ~ 10.99
+                            </div>
+                            <div>
+                                A description of a potential pizza but we're also gonna test how long we can make this go in.
                             </div>
                             <div>
                                 <div class="pizza-list-item-topping">Tomato Sauce</div>
@@ -30,10 +156,15 @@
                         </div>
                     </div>
                 </div>
+                
                 <form id="pizza-update-wrapper">
                     <div id="pizza-update-metadata">
                         <div id="pizza-update-photo">
+                            
                             <img src="./images/pizza-pep-veg.webp" alt="">
+                            <div style="margin: auto; width: 80%; text-align: center;">
+                                <small>Select an image to represent this creation</small>
+                            </div>
                         </div>
                         <div id="pizza-update-forminputs">
                             <div>
@@ -47,7 +178,8 @@
                         </div>
                     </div>
                     <div id="pizza-update-toppings"> 
-                        <h3>Choose Toppings:</h3>
+                        For each 
+                        <h3>Choose Toppings</h3>
                         <div class="available-topping">
                             Mozzarella
                         </div>
