add create pizza front end functionality

--- a/views/chefdashboard.ejs
+++ b/views/chefdashboard.ejs
@@ -8,135 +8,9 @@
         </div>
         
         <div id="pizza-view-container">
-            <div class="button" style="margin-left: 50px;">Create a Pizza</div>
+            <div class="button" style="margin-left: 50px;" onclick="displayNewPizza()">Create a Pizza</div>
             <div id="pizza-view-control">
                 <div id="pizza-list-wrapper">
-                    <div class="pizza-list-item-wrapper"> 
-                        <div class="pizza-list-item-image">
-                            <img src="./images/pizza-pep-veg.webp" alt="">
-                        </div>
-                        <div class="pizza-list-item-data">
-                            <div>
-                                <h3 style="display: inline;">Pepperoni Pizzaaa</h3> ~ 10.99
-                            </div>
-                            <div>
-                                A description of a potential pizza but we're also gonna test how long we can make this go in.
-                            </div>
-                            <div>
-                                <div class="pizza-list-item-topping">Tomato Sauce</div>
-                                <div class="pizza-list-item-topping">Mozarella Cheese</div>
-                                <div class="pizza-list-item-topping">Pepperoni</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="pizza-list-item-wrapper"> 
-                        <div class="pizza-list-item-image">
-                            <img src="./images/pizza-pep-veg.webp" alt="">
-                        </div>
-                        <div class="pizza-list-item-data">
-                            <div>
-                                <h3 style="display: inline;">When one has too many</h3> ~ 10.99
-                            </div>
-                            <div>
-                                A description of a potential pizza but we're also gonna test how long we can make this go in.
-                            </div>
-                            <div>
-                                <div class="pizza-list-item-topping">Tomato Sauce</div>
-                                <div class="pizza-list-item-topping">Mozarella Cheese</div>
-                                <div class="pizza-list-item-topping">Pepperoni</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="pizza-list-item-wrapper"> 
-                        <div class="pizza-list-item-image">
-                            <img src="./images/pizza-pep-veg.webp" alt="">
-                        </div>
-                        <div class="pizza-list-item-data">
-                            <div>
-                                <h3 style="display: inline;">Pepperoni Pizzaaa</h3> ~ 10.99
-                            </div>
-                            <div>
-                                A description of a potential pizza but we're also gonna test how long we can make this go in.
-                            </div>
-                            <div>
-                                <div class="pizza-list-item-topping">Tomato Sauce</div>
-                                <div class="pizza-list-item-topping">Mozarella Cheese</div>
-                                <div class="pizza-list-item-topping">Pepperoni</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="pizza-list-item-wrapper"> 
-                        <div class="pizza-list-item-image">
-                            <img src="./images/pizza-pep-veg.webp" alt="">
-                        </div>
-                        <div class="pizza-list-item-data">
-                            <div>
-                                <h3 style="display: inline;">Pepperoni Pizzaaa</h3> ~ 10.99
-                            </div>
-                            <div>
-                                A description of a potential pizza but we're also gonna test how long we can make this go in.
-                            </div>
-                            <div>
-                                <div class="pizza-list-item-topping">Tomato Sauce</div>
-                                <div class="pizza-list-item-topping">Mozarella Cheese</div>
-                                <div class="pizza-list-item-topping">Pepperoni</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="pizza-list-item-wrapper"> 
-                        <div class="pizza-list-item-image">
-                            <img src="./images/pizza-pep-veg.webp" alt="">
-                        </div>
-                        <div class="pizza-list-item-data">
-                            <div>
-                                <h3 style="display: inline;">Pepperoni Pizzaaa</h3> ~ 10.99
-                            </div>
-                            <div>
-                                A description of a potential pizza but we're also gonna test how long we can make this go in.
-                            </div>
-                            <div>
-                                <div class="pizza-list-item-topping">Tomato Sauce</div>
-                                <div class="pizza-list-item-topping">Mozarella Cheese</div>
-                                <div class="pizza-list-item-topping">Pepperoni</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="pizza-list-item-wrapper"> 
-                        <div class="pizza-list-item-image">
-                            <img src="./images/pizza-pep-veg.webp" alt="">
-                        </div>
-                        <div class="pizza-list-item-data">
-                            <div>
-                                <h3 style="display: inline;">Pepperoni Pizzaaa</h3> ~ 10.99
-                            </div>
-                            <div>
-                                A description of a potential pizza but we're also gonna test how long we can make this go in.
-                            </div>
-                            <div>
-                                <div class="pizza-list-item-topping">Tomato Sauce</div>
-                                <div class="pizza-list-item-topping">Mozarella Cheese</div>
-                                <div class="pizza-list-item-topping">Pepperoni</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="pizza-list-item-wrapper"> 
-                        <div class="pizza-list-item-image">
-                            <img src="./images/pizza-pep-veg.webp" alt="">
-                        </div>
-                        <div class="pizza-list-item-data">
-                            <div>
-                                <h3 style="display: inline;">Pepperoni Pizzaaa</h3> ~ 10.99
-                            </div>
-                            <div>
-                                A description of a potential pizza but we're also gonna test how long we can make this go in.
-                            </div>
-                            <div>
-                                <div class="pizza-list-item-topping">Tomato Sauce</div>
-                                <div class="pizza-list-item-topping">Mozarella Cheese</div>
-                                <div class="pizza-list-item-topping">Pepperoni</div>
-                            </div>
-                        </div>
-                    </div>
                     <div class="pizza-list-item-wrapper"> 
                         <div class="pizza-list-item-image">
                             <img src="./images/pizza-pep-veg.webp" alt="">
@@ -175,7 +49,7 @@
                         <div id="pizza-update-forminputs">
                             <div>
                                 <h3>Name</h3>
-                                <input type="text" name="name" placeholder="Name" maxlength="17">
+                                <input type="text" name="name" placeholder="Name" maxlength="20">
                             </div>
                             <div>
                                 <h3>Description</h3>
@@ -210,7 +84,7 @@
                         <div id="pizza-new-forminputs">
                             <div>
                                 <h3>New Pizza Name</h3>
-                                <input type="text" name="name" placeholder="Name" maxlength="17">
+                                <input type="text" name="name" placeholder="Name" maxlength="20">
                             </div>
                             <div>
                                 <h3>Description</h3>
