--- a/public/styles.css
+++ b/public/styles.css
@@ -300,6 +300,9 @@ div > input, select {
 ::-webkit-scrollbar {
     width: 10px;
 }
+
+/* Masking for pizza list data overflow?  */
+
 .pizza-list-item-wrapper {
     border: 1px solid #bc1a1f;
     box-shadow: 0px 5px 5px #1e1f4e;
